--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                             <a class="nav-link active" href="index.html" style="color: #d67f15; font-weight: bold;">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="events.html" style="color: #ffffff; transition: color 0.3s ease;">Events</a>
+                            <a class="nav-link" href="pages/events.html" style="color: #ffffff; transition: color 0.3s ease;">Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="register.html" style="color: #ffffff; transition: color 0.3s ease;">Register</a>
+                            <a class="nav-link" href="pages/register.html" style="color: #ffffff; transition: color 0.3s ease;">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html" style="color: #ffffff; transition: color 0.3s ease;">Contact</a>
+                            <a class="nav-link" href="pages/contact.html" style="color: #ffffff; transition: color 0.3s ease;">Contact</a>
                         </li>
                     </ul>
                 </div>
