--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container-fluid" >
                 <!-- Logo -->
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="../assets/images/CBIT-LOGO.png" alt="CBIT Logo" width="420" height="102" class="me-2 logo-hover">
+                    <img src="/assets/images/CBIT-LOGO.png" alt="CBIT Logo" width="420" height="102" class="me-2 logo-hover">
                 </a>
     
                 <!-- Navbar Toggler for Small Screens -->
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="index.html" style="color: #d67f15; font-weight: bold;">Home</a>
+                            <a class="nav-link active" href=".index.html" style="color: #d67f15; font-weight: bold;">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pages/events.html" style="color: #ffffff; transition: color 0.3s ease;">Events</a>
