--- a/pages/register.html
+++ b/pages/register.html
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-expand-lg navbar sticky-top" style="background: linear-gradient(135deg, #E0AAFF, #C77DFF); box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
             <div class="container-fluid" >
                 <!-- Logo -->
-                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <a class="navbar-brand d-flex align-items-center" href="../index.html">
                     <img src="../assets/images/CBIT-LOGO.png" alt="CBIT Logo" width="420" height="102" class="me-2 logo-hover">
                 </a>
     
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="index.html" style="color: #d67f15; font-weight: bold;">Home</a>
+                            <a class="nav-link active" href="../index.html" style="color: #d67f15; font-weight: bold;">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="events.html" style="color: #ffffff; transition: color 0.3s ease;">Events</a>
