--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+    <div class="video-container">
+        <video autoplay muted loop id="myVideo">
+            <source src="/CBIT-Event-Registration/assets/images/231873_small.mp4" type="video/mp4">
+        </video>
+
+    </div>
+    
     <header>
         <nav class="navbar navbar-expand-lg navbar sticky-top" style="background: linear-gradient(135deg, #E0AAFF, #C77DFF); box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
             <div class="container-fluid" >
@@ -85,6 +92,17 @@
                         <img src="assets/images/PlaneSprint.png" class="card-img-top" alt="Event 3">
                         <div class="card-body">
                             <h5 class="card-title">PlaneSprint hackathon</h5>
+                            <a href="pages/register.html" class="btn btn-primary">Register Now</a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="pages/events.html" style="text-decoration: none; color: inherit;">
+                    <div class="card">
+                        <img src="assets/images/Hacktoberfest2024.png" class="card-img-top" alt="Event 4">
+                        <div class="card-body">
+                            <h5 class="card-title">Hacktoberfest2024</h5>
                             <a href="pages/register.html" class="btn btn-primary">Register Now</a>
                         </div>
                     </div>
