--- a/pages/events.html
+++ b/pages/events.html
@@ -117,7 +117,19 @@
                     </div>
                 </div>
             </div>
-    
+            
+            <div class="col-md-4 event-card" data-category="coding-challenges">
+                <div class="card">
+                    <img src="../assets/images/Hacktoberfest2024.png" class="card-img-top" alt="Cultural Fest">
+                    <div class="card-body">
+                        <h5 class="card-title">Hacktoberfest2024</h5>
+                        <p class="card-text">Hacktoberfest, is a month-long global celebration of all things open source, presented by DigitalOcean, 
+                            Cloudflare, and Quira. Hacktoberfest celebrates giving back to these projects, honing skills, and recognizing the people 
+                            who make open source exceptional.</p>
+                        <a href="register.html" class="btn btn-primary">Register</a>
+                    </div>
+                </div>
+            </div>
             <!-- Cultural Event -->
             <div class="col-md-4 event-card" data-category="cultural">
                 <div class="card">
