--- a/pages/register.html
+++ b/pages/register.html
@@ -94,6 +94,16 @@
                     </div>
                 </div>
             </div>
+            <!-- Event 4 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="../assets/images/Hacktoberfest2024.png" class="card-img-top" alt="Event 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Hacktoberfest2024</h5>
+                        <button class="btn btn-primary" onclick="showForm('PlaneSprint Hackathon')">Register Now</button>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </section>
