--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,7 @@
     <header class="hero text-center py-5" style="height: 400px;">
         <div class="container">
             <h1>Contact</h1>
-            <h2>Reach Out To Us!</h2>
+            <p>Reach Out To Us!</p>
         </div>
     </header>
     <div class="container text">
