--- a/pages/register.html
+++ b/pages/register.html
@@ -114,7 +114,7 @@
             <div class="col-md-6">
                 <div class="card p-4">
                     <h4 class="text-center">Event Registration</h4>
-                    <form action="https://benevolent-pasca-90b5a6.netlify.app/pages/register.html" method="POST">
+                    <form action="https://benevolent-pasca-90b5a6.netlify.app/pages/register.html" method="GET" data-netlify="true">
                         <label for="eventName">Selected Event:</label>
                         <input type="text" id="eventName" name="event" class="form-control" readonly><br>
 
